[package]
name = "wordle-thing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "wordle-bench"
harness = false
path = "src/bench.rs"

[profile.release]
opt-level = 3
#debug = false
debug = true
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false
